--- a/css/location-edit.css
+++ b/css/location-edit.css
@@ -21,3 +21,10 @@
 	display: block;
 	width: 100%;
 }
+
+/* Location Address Map */
+#location_address__map {
+	clear: both;
+	width: 100%;
+	height: 400px;
+}
