Added basic styles for lsform__summary

--- a/css/locations-search.css
+++ b/css/locations-search.css
@@ -124,4 +124,13 @@
 	margin: 0;
 	padding: 0 2em 1em;
 	border-bottom: 1px solid #EEE;
+/* Search Summary */
+.lsform__summary {}
+.lsform__summary p {
+	margin: 0;
+	padding: 1em 1.5em;
+	border-bottom: 1px solid #EEE;
+	text-transform: uppercase;
+}
+
 }
