--- a/css/locations-search.css
+++ b/css/locations-search.css
@@ -4,6 +4,7 @@
 	position: relative;
 	border: 1px solid #EEE;
 	margin-bottom: 20px;
+	background: white;
 }
 .lsform,
 .lsform__options,
@@ -12,6 +13,7 @@
 	width: 100%;
 	box-sizing: border-box;
 	overflow: hidden;
+	position: relative;
 }
 .lsform__results {
 	display: none;
@@ -154,4 +156,14 @@
 }
 
 
+/* Loading */
+.lsform--loading:after {
+	content: '';
+	position: absolute;
+	z-index: 10;
+	left: 0;
+	top: 0;
+	right: 0;
+	bottom: 0;
+	background: rgba( 255, 255, 255, .75 ) url(../images/loading.svg) center center no-repeat;
 }
