--- a/css/location-edit.css
+++ b/css/location-edit.css
@@ -1,23 +1,36 @@
 
-/* Location Address Metabox */
-.location_address__row {
+/* Grids */
+.lsedit__row {
 	margin-left: -20px;
 }
-.location_address__row:after {
+.lsedit__row:after {
 	content: '';
 	display: block;
 	clear: both;
 }
-.location_address__col {
+.lsedit__column {
 	float: left;
 	width: calc( 50% - 20px );
 	margin: .5em 0 .5em 20px;
 }
-.location_address__col:nth-child( 2n+1 ) {
+.lsedit__column:nth-child( 2n+1 ) {
 	clear: left;
 }
-.location_address__col input,
-.location_address__col select {
+
+/* 3 rows */
+.lsedit__row--3cols .lsedit__column {
+	width: calc( 33.3% - 20px );
+}
+.lsedit__row--3cols .lsedit__column:nth-child( 2n+1 ) {
+	clear: none;
+}
+.lsedit__row--3cols .lsedit__column:nth-child( 3n+1 ) {
+	clear: both;
+}
+
+/* Fields */
+.lsedit__column input,
+.lsedit__column select {
 	display: block;
 	width: 100%;
 }
