--- a/css/location-edit.css
+++ b/css/location-edit.css
@@ -49,3 +49,35 @@
 	width: 100%;
 	height: 400px;
 }
+
+/* Subheading */
+.lsedit__subheading {
+	font-weight: bold !important;
+	text-align: center;
+	margin: 20px 0 0px !important;
+}
+
+/* Table */
+.lsedit__openinghours {
+	width: 100%;
+	border-collapse: collapse;
+}
+.lsedit__openinghours td,
+.lsedit__openinghours th {
+	width: 33.3%;
+	padding: 2px 10px;
+	text-align: left;
+	font-weight: normal;
+}
+.lsedit__openinghours td:first-child,
+.lsedit__openinghours th:first-child {
+	padding-left: 0;
+}
+.lsedit__openinghours td:last-child,
+.lsedit__openinghours th:last-child {
+	padding-right: 0;
+}
+.lsedit__openinghours input {
+	display: block;
+	width: 100%;
+}
