--- a/css/locations-search.css
+++ b/css/locations-search.css
@@ -194,6 +194,18 @@
 	background: rgba( 255, 255, 255, .75 ) url(../images/loading.svg) center center no-repeat;
 }
 
+/* Info Windows */
+.lsform__infowindow {
+}
+.lsform__infowindow__title {
+	font-weight: bold;
+}
+.lsform__infowindow__distance {
+	font-style: italic;
+}
+.lsform__infowindow__address {
+}
+
 /* How to style the info window: */;
 /*
 .gm-style-iw {
