Change cursor on clickable result items

--- a/css/locations-search.css
+++ b/css/locations-search.css
@@ -176,6 +176,9 @@
 }
 
 /* Selected Result */
+.lsform__result--clickable {
+	cursor: pointer;
+}
 .lsform__result--selected {
 	background: #F2F2F2;
 }
